<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity">

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:orderInCategory="100"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom" />
</menu>