<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.margarita.voicenotes.ui.activities.NoteActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin8"
        app:cardCornerRadius="@dimen/margin3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin8">

            <ImageButton
                android:id="@+id/imgBtnSpeak"
                android:layout_width="@dimen/mic_icon_size"
                android:layout_height="@dimen/mic_icon_size"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/speak"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_mic_white_24dp" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/edit_text_height">

                <EditText
                    android:id="@+id/etNote"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="@dimen/edit_text_height"
                    android:hint="@string/note_text" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/layoutPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="@dimen/photo_size"
                    android:layout_height="@dimen/photo_size"
                    android:contentDescription="@string/photo"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <TextView
                    android:id="@+id/tvPhoto"
                    android:layout_toRightOf="@id/ivPhoto"
                    android:layout_toEndOf="@id/ivPhoto"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_photo"/>

                <ImageButton
                    android:id="@+id/imgBtnPhoto"
                    android:layout_width="@dimen/mic_icon_size"
                    android:layout_height="@dimen/mic_icon_size"
                    android:layout_toLeftOf="@id/imgBtnChoosePhoto"
                    android:layout_toStartOf="@id/imgBtnChoosePhoto"
                    android:contentDescription="@string/take_a_photo"
                    android:layout_centerVertical="true"
                    android:background="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                <ImageButton
                    android:id="@+id/imgBtnChoosePhoto"
                    android:layout_width="@dimen/mic_icon_size"
                    android:layout_height="@dimen/mic_icon_size"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/choose_photo"
                    android:layout_centerVertical="true"
                    android:background="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_photo_library_black_24dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>
