<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/progress_bar" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8"
            app:cardCornerRadius="@dimen/margin3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margin16">

                <ImageButton
                    android:id="@+id/imgBtnSpeak"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:adjustViewBounds="false"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/speak"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_mic_white_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin4"
                        android:layout_marginRight="@dimen/margin4"
                        android:layout_gravity="center_vertical"
                        android:textStyle="italic"
                        android:text="@string/category"/>

                    <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:prompt="@string/choose_category"/>

                </LinearLayout>

                <View style="@style/Divider" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin4"
                        android:layout_marginRight="@dimen/margin4"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:textStyle="italic"
                        android:text="@string/note_text" />

                    <ImageButton
                        android:id="@+id/imgBtnClear"
                        android:layout_width="@dimen/image_button_size"
                        android:layout_height="@dimen/image_button_size"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/choose_photo"
                        android:background="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/ic_clear_black_24dp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/etNote"
                    android:gravity="top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="@dimen/edit_text_height"
                    android:inputType="textMultiLine" />

                <RelativeLayout
                    android:id="@+id/layoutPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="@dimen/photo_size_big"
                        android:layout_height="@dimen/photo_size_big"
                        android:contentDescription="@string/photo"
                        android:layout_marginLeft="@dimen/margin3"
                        android:layout_marginStart="@dimen/margin3"
                        android:layout_centerVertical="true"
                        app:srcCompat="@mipmap/ic_launcher"/>

                    <TextView
                        android:id="@+id/tvPhoto"
                        android:layout_toRightOf="@id/ivPhoto"
                        android:layout_toEndOf="@id/ivPhoto"
                        android:layout_toLeftOf="@id/space"
                        android:layout_toStartOf="@id/space"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin8"
                        android:layout_marginLeft="@dimen/margin8"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textStyle="italic"
                        android:text="@string/set_photo"/>

                    <Space
                        android:id="@+id/space"
                        android:layout_width="@dimen/margin8"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@id/imgBtnPhoto"
                        android:layout_toStartOf="@id/imgBtnPhoto"/>

                    <ImageButton
                        android:id="@+id/imgBtnPhoto"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_toLeftOf="@id/imgBtnChoosePhoto"
                        android:layout_toStartOf="@id/imgBtnChoosePhoto"
                        android:contentDescription="@string/take_a_photo"
                        android:background="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                    <ImageButton
                        android:id="@+id/imgBtnChoosePhoto"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/choose_photo"
                        android:background="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/ic_photo_library_black_24dp" />

                    <ImageButton
                        android:id="@+id/imgBtnCrop"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_below="@id/imgBtnPhoto"
                        android:layout_toRightOf="@id/space"
                        android:layout_toEndOf="@id/space"
                        android:background="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/ic_crop_black_24dp"
                        android:contentDescription="@string/crop_image" />

                    <ImageButton
                        android:id="@+id/imgBtnDelete"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_toRightOf="@id/imgBtnCrop"
                        android:layout_toEndOf="@id/imgBtnCrop"
                        android:layout_below="@id/imgBtnChoosePhoto"
                        android:background="?android:attr/selectableItemBackground"
                        app:srcCompat="@drawable/ic_delete_black_24dp"
                        android:contentDescription="@string/delete_image" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin8"
                    android:theme="@style/AppTheme.ButtonThemeWithRipple"
                    android:textColor="@color/colorWhite"
                    android:text="@string/save" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>